crates/sgf-core/tests/snapshots/header_counts/update_empire_counts.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Update empire counts
inverse: SetHeaderKeys { entries: [("num_empires", "{ min = 0 max = 3 }"), ("num_empire_default", "3"), ("advanced_empire_default", "0"), ("nomad_empire_default", "0"), ("nomad_empire_max", "3"), ("fallen_empire_max", "6"), ("fallen_empire_default", "0")] }

--- scenario
+++ scenario
@@ -20,15 +20,15 @@
 	num_hyperlanes_default = 1
 	colonizable_planet_odds = 1.0
 	primitive_odds = 1.0
-	fallen_empire_max = 6
+	fallen_empire_max = 2
 	marauder_empire_max = 3
 	extra_crisis_strength = { 10 25 }
 	num_empires = { min = 0 max = 3 }
-	num_empire_default = 3
+	num_empire_default = 1
 	advanced_empire_default = 0
 	nomad_empire_default = 0
 	nomad_empire_max = 3
-	fallen_empire_default = 0
+	fallen_empire_default = 2
 	marauder_empire_default = 1
 	crisis_strength = 0.5
 	system = { id = "0" position = { x = 0 y = 120 } name = "Alpha" initializer = random_empire_init_01 spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|RANDOM_MODULO|10|RANDOM_VALUE|3| } }
